--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,6 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+# Ignore files needed for development only / private / etc.
+/untracked/*
