--- a/config/database.yml.example
+++ b/config/database.yml.example
@@ -23,13 +23,13 @@ default: &default
 
 development:
   <<: *default
-  database: pn_coaches_directory_development
+  database: coaches_directory_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user that initialized the database.
-  #username: pn_coaches_directory
+  #username: coaches_directory
 
   # The password associated with the postgres role (username).
   #password:
@@ -57,7 +57,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: pn_coaches_directory_test
+  database: coaches_directory_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -80,6 +80,6 @@ test:
 #
 production:
   <<: *default
-  database: pn_coaches_directory_production
-  username: pn_coaches_directory
-  password: <%= ENV['PN_COACHES_DIRECTORY_DATABASE_PASSWORD'] %>
+  database: coaches_directory_production
+  username: coaches_directory
+  password: <%= ENV['COACHES_DIRECTORY_DATABASE_PASSWORD'] %>
